[workspace]
members = [
    "vkengine",
    "vktest",
    "gltf-import",
]
resolver = "2"

[workspace.dependencies]
ash = "0.37.3"
ash-window = "0.12.0"
base64 = "0.22.0"
bevy_mikktspace = "0.13.1"
bytemuck = "1.15.0"
bytemuck_derive = "1.6.0"
clap = "4.5.4"
egui = "0.27.2"
egui-winit = "0.27.2"
glam = "0.25.0"
gltf = "1.4.0"
gpu-allocator = { version = "0.25.0", default-features = false }
image = "0.25.1"
inline-spirv = "0.2.1"
raw-window-handle = "0.5.0"
thiserror = "1.0.58"
urlencoding = "2.1.3"
winit = "0.29.4"
yastl = "0.1.2"

# Always compile deps with optimization.
# Some crates, like image, are *really* slow on unoptimized debug mode
[profile.dev.package."*"]
opt-level = 1

# For profiling support
[profile.release-prof]
inherits = "release"
debug = true

# LTO-enabled release
[profile.release-lto]
inherits = "release"
lto = true
