[workspace]
members = [
    "vkengine",
    "vktest",
    "gltf-import",
]
resolver = "2"

[workspace.dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
base64 = "0.22.0"
bevy_mikktspace = "0.16.1"
bytemuck = "1.24.0"
bytemuck_derive = "1.10.2"
clap = "4.5.4"
egui = "0.33.2"
egui-winit = "0.33.2"
glam = "0.30.9"
gltf = "1.4.0"
gpu-allocator = { version = "0.28.0", default-features = false, features = ["std", "vulkan"] }
image = "0.25.9"
inline-spirv = "0.2.1"
raw-window-handle = "0.6.0"
thiserror = "2.0.17"
urlencoding = "2.1.3"
winit = "0.30.12"
yastl = "0.1.2"

# Always compile deps with optimization.
# Some crates, like image, are *really* slow on unoptimized debug mode
[profile.dev.package."*"]
opt-level = 1

# For profiling support
[profile.release-prof]
inherits = "release"
debug = true

# LTO-enabled release
[profile.release-lto]
inherits = "release"
lto = true
