[package]
name = "gltf-import"
version = "0.1.0"
authors = ["SnowDerg <slayerbeast@gmail.com>"]
edition = "2021"

[dependencies]
gltf = { workspace = true, features = ["KHR_lights_punctual"] }
image = { workspace = true }
urlencoding = { workspace = true }
base64 = { workspace = true }
glam = { workspace = true }
bevy_mikktspace = { workspace = true }
