[package]
name = "vkengine"
version = "0.1.0"
authors = ["SnowDerg <slayerbeast@gmail.com>"]
edition = "2021"

[dependencies]
ash = "0.37.2"
ash-window = "0.12.0"
raw-window-handle = "0.5.0"
cstr = "0.2.11"
inline-spirv = "0.1.5"
memoffset = "0.8.0"
glam = { version = "0.22.0", features = ["bytemuck"] }
bytemuck = "1.13.0"
bytemuck_derive = "1.4.0"
gpu-allocator = { version = "0.22.0", features = ["vulkan"], default_features = false }

winit = { version = "0.28.1", optional = true }
egui = { version = "0.21.0", features = ["bytemuck"], optional = true }
gltf-import = { path = "../gltf-import" }
#TODO: remove these or turn them optional
egui-winit = { version = "0.21.1" }
