[package]
name = "vkengine"
version = "0.1.0"
authors = ["SnowDerg <slayerbeast@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[dependencies]
ash = { workspace = true }
ash-window = { workspace = true }
raw-window-handle = { workspace = true }
inline-spirv = { workspace = true }
glam = { workspace = true, features = ["bytemuck"] }
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }
gpu-allocator = { workspace = true, features = ["vulkan"] }

winit = { workspace = true, optional = true }
egui = { workspace = true, features = ["bytemuck"], optional = true }
gltf-import = { path = "../gltf-import" }
#TODO: remove these or turn them optional
egui-winit = { workspace = true }
