[package]
name = "vktest"
version = "0.1.0"
authors = ["SnowDerg <slayerbeast@gmail.com>"]
edition = "2021"

[dependencies]
vkengine = { path = "../vkengine", features = ["winit", "egui"] }
winit = { workspace = true }
image = { workspace = true }
clap = { workspace = true, features = ["derive"] }
yastl = { workspace = true }
gltf-import = { path = "../gltf-import" }
